# sze-prog

./: CMakeLists.txt  LICENSE  README.md  main.cpp
ati_gyak/: gyak1.cpp  gyak2.cpp  gyak3.cpp
gyakorlatok/: gyak1.cpp  gyak2.cpp  gyak3.cpp  gyak4.cpp  gyak5.cpp  gyak6.cpp  gyak7.cpp  gyak8.cpp
linked-list/: proba1.cpp  proba2.cpp
sajat_gyak/: H6S3.cpp  H7S1.cpp  H7S2.cpp  H7S3.cpp  H7S4.cpp  s1.cpp  s2.cpp
vizsgaGyak/: input.txt  vGyak1.cpp  vGyak2.cpp  vGyak3.cpp
vizsgaGyak/2020.jun.11/: F1.cpp  F2.cpp  F3.cpp  F4.cpp
vizsgaGyak/2020.junius.18/: F1.cpp  F2.cpp  F3.cpp  F4.cpp  F5.cpp  covid19.txt
vizsgaGyak/2020.junius.4/: F1.cpp
vizsgaGyak/2020.majus.14/: F1.cpp
vizsgaGyak/2020.majus.21/: F1.cpp  F5.cpp  tadata3.txt
vizsgaGyak/2020.majus.28/: F1.cpp  F2.cpp
vizsgaGyak/Osszetett/: F1.cpp  F31.cpp  F32.cpp  F35.cpp  F6.cpp
vizsgaGyak/UJ_minta_vizsgak_LINKED/: F1.cpp
vizsgaGyak/UJ_minta_vizsgak_STR/: F16.cpp  F2.cpp  F21.cpp  F6.cpp  F7.cpp
vizsgaGyak/UJ_minta_vizsgak_TXT/: F13.cpp  F20.cpp  F9.cpp  words1.txt
