cmake_minimum_required(VERSION 3.28)
project(sze_prog)

set(CMAKE_CXX_STANDARD 23)

add_executable(sze_prog main.cpp)
add_executable(gyak1 gyakorlatok/gyak1.cpp)
add_executable(gyak2 gyakorlatok/gyak2.cpp)
add_executable(gyak3 gyakorlatok/gyak3.cpp)
add_executable(gyak4 gyakorlatok/gyak4.cpp)
add_executable(gyak5 gyakorlatok/gyak5.cpp)
add_executable(gyak6 gyakorlatok/gyak6.cpp)
add_executable(gyak7 gyakorlatok/gyak7.cpp)
add_executable(proba1 linked-list/proba1.cpp)
add_executable(proba2 linked-list/proba2.cpp)
add_executable(gyak8 gyakorlatok/gyak8.cpp)
add_executable(atigyak1 ati_gyak/gyak1.cpp)