cmake_minimum_required(VERSION 3.28)
project(sze_prog)

set(CMAKE_CXX_STANDARD 17)

add_executable(sze_prog main.cpp)
add_executable(gyak1 gyakorlatok/gyak1.cpp)
add_executable(gyak2 gyakorlatok/gyak2.cpp)
add_executable(gyak3 gyakorlatok/gyak3.cpp)
add_executable(gyak4 gyakorlatok/gyak4.cpp)
add_executable(gyak5 gyakorlatok/gyak5.cpp)
add_executable(gyak6 gyakorlatok/gyak6.cpp)
add_executable(gyak7 gyakorlatok/gyak7.cpp)
add_executable(proba1 linked-list/proba1.cpp)
add_executable(proba2 linked-list/proba2.cpp)
add_executable(gyak8 gyakorlatok/gyak8.cpp)
add_executable(atigyak1 ati_gyak/gyak1.cpp)
add_executable(atigyak2 ati_gyak/gyak2.cpp)
add_executable(atigyak3 ati_gyak/gyak3.cpp)
add_executable(vGyak1 vizsgaGyak/vGyak1.cpp)
add_executable(vGyak2 vizsgaGyak/vGyak2.cpp)
add_executable(vGyak3 vizsgaGyak/vGyak3.cpp)
add_executable(F1 vizsgaGyak/2020.majus.14/F1.cpp)
add_executable(F2 vizsgaGyak/2020.majus.14/F2.cpp)
add_executable(21F1 vizsgaGyak/2020.majus.21/F1.cpp
        vizsgaGyak/2020.majus.28/F1.cpp
        vizsgaGyak/2020.jun.11/F1.cpp)
add_executable(21F5 vizsgaGyak/2020.majus.21/F5.cpp)
add_executable(M28F1 vizsgaGyak/2020.majus.28/F1.cpp)
add_executable(M28F2 vizsgaGyak/2020.majus.28/F2.cpp)
add_executable(J4F1 vizsgaGyak/2020.junius.4/F1.cpp)
add_executable(20F1JUN11 vizsgaGyak/2020.jun.11/F1.cpp
        vizsgaGyak/2020.jun.11/F2.cpp
        vizsgaGyak/2020.jun.11/F4.cpp
        vizsgaGyak/2020.junius.4/F2.cpp
        vizsgaGyak/2020.junius.18/F1.cpp
        vizsgaGyak/2020.junius.18/F2.cpp
        vizsgaGyak/2020.junius.18/F3.cpp
        vizsgaGyak/2020.junius.18/F5.cpp
        vizsgaGyak/2020.junius.18/F4.cpp
        vizsgaGyak/UJ_minta_vizsgak_STR/F2.cpp)
add_executable(20F2JUN11 vizsgaGyak/2020.jun.11/F2.cpp)
add_executable(20F3JUN11 vizsgaGyak/2020.jun.11/F3.cpp)
add_executable(20F4JUN11 vizsgaGyak/2020.jun.11/F4.cpp)
add_executable(JUN18F1 vizsgaGyak/2020.junius.18/F1.cpp)
add_executable(JUN18F2 vizsgaGyak/2020.junius.18/F2.cpp)
add_executable(JUN18F3 vizsgaGyak/2020.junius.18/F3.cpp)
add_executable(JUN18F5 vizsgaGyak/2020.junius.18/F5.cpp)
add_executable(JUN18F4 vizsgaGyak/2020.junius.18/F4.cpp)
add_executable(UJF2STR vizsgaGyak/UJ_minta_vizsgak_STR/F2.cpp)
add_executable(UJF6STR vizsgaGyak/UJ_minta_vizsgak_STR/F6.cpp)
add_executable(UJF7STR vizsgaGyak/UJ_minta_vizsgak_STR/F7.cpp)
add_executable(UJF16STR vizsgaGyak/UJ_minta_vizsgak_STR/F16.cpp)
add_executable(UJF21STR vizsgaGyak/UJ_minta_vizsgak_STR/F21.cpp)
